# carwork

./: .dockerignore  .env.example  .gitignore  Makefile  PROJECT_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_policies_shops.py  0003_conversations.py
backend/app/: main.py
backend/app/ai/: orchestrator.py  routing.py
backend/app/ai/agent/: __init__.py  loop.py  prompts.py  schemas.py  tools.py
backend/app/ai/providers/: aliyun.py  base.py  openai_compat.py  vision_ocr.py
backend/app/ai/rag/: store.py
backend/app/ai/skills/: __init__.py  base.py  chat.py  damage_assessment.py  ocr_extract.py
backend/app/api/: router.py
backend/app/api/v1/: aftermarket.py  agent.py  auth.py  claims.py  documents.py  health.py  vehicles.py
backend/app/core/: config.py  deps.py  logging.py  security.py
backend/app/data/: __init__.py  price_catalog.json
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  account.py  ai_call_log.py  case.py  conversation.py  document.py  knowledge.py  organization.py  policy.py  repair_shop.py  vehicle.py
backend/app/platform/documents/: service.py  storage.py
backend/app/platform/vehicles/: service.py
backend/app/schemas/: common.py  conversation.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_health.py
h5/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
web/: index.html  package.json  (+2 more)
(+33 files in other folders)
