[project]
name = "carwork-backend"
version = "0.1.0"
description = "Carwork - 保险理赔 + 车后市场 AI 平台后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pgvector>=0.3",
    "redis>=5.0",
    "celery>=5.4",
    "httpx>=0.27",
    "tenacity>=8.5",
    "python-multipart>=0.0.9",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "minio>=7.2",
    "structlog>=24.4",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/*" = ["E", "F"]
# Depends(...) 作为 FastAPI 依赖默认值是惯用法，B008 误报
"app/api/*" = ["B008"]
"app/core/deps.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
